examples/test/testpolicy19573.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19573
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key16: value33
      key20: value37
      key25: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value47
          key1: value26
          key49: value36
